<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="message_text">Моя первая программа. И первый шаг на пути к хорошему разработчику.</string>
    <string name="ok">OK</string>
    <string name="about">About</string>
    <string name="c">C</string>
    <string name="min">+/-</string>
    <string name="percent">%</string>
    <string name="del">DEL</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equally">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">÷</string>
</resources>
