<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/equality"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:layout_weight="0.59" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="0.59"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:gravity="right"
            android:id="@+id/tv2"
            android:maxLines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv1"
            android:layout_weight="1.5"
            android:textSize="40sp"
            android:gravity="right"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/c"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnC"
            android:layout_weight="1"
            android:background="@drawable/border_top_left"
            android:textSize="24sp"
            android:onClick="onClickRes" />

        <Button
            android:text="@string/min"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnMin"
            android:layout_weight="1"
            android:background="@drawable/border_top_left"
            android:textSize="24sp"
            android:onClick="onClickRes" />

        <Button
            android:text="@string/percent"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnPerc"
            android:layout_weight="1"
            android:background="@drawable/border_top_left"
            android:textSize="24sp"
            android:onClick="onClickRes" />

        <Button
            android:text="@string/del"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnDel"
            android:layout_weight="1"
            android:background="@drawable/border_top_left"
            android:textSize="24sp"
            android:onClick="onClickRes" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/seven"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn7"
            android:layout_weight="1"
            android:background="@drawable/border_top_left"
            android:textSize="24sp"
            android:onClick="onClickNumb" />

        <Button
            android:text="@string/eight"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn8"
            android:layout_weight="1"
            android:background="@drawable/border_top_left"
            android:textSize="24sp"
            android:onClick="onClickNumb" />

        <Button
            android:text="@string/nine"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn9"
            android:layout_weight="1"
            android:background="@drawable/border_top_left"
            android:textSize="24sp"
            android:onClick="onClickNumb" />

        <Button
            android:text="@string/divide"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnDiv"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/border_left_top_right_grey"
            android:onClick="onClickRes" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/four"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn4"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/border_top_left"
            android:onClick="onClickNumb" />

        <Button
            android:text="@string/five"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn5"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/border_top_left"
            android:onClick="onClickNumb" />

        <Button
            android:text="@string/six"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn6"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/border_top_left"
            android:onClick="onClickNumb" />

        <Button
            android:text="@string/multiply"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnMul"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/border_left_top_right_grey"
            android:onClick="onClickRes" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/one"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn1"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/border_top_left"
            android:onClick="onClickNumb" />

        <Button
            android:text="@string/two"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn2"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/border_top_left"
            android:onClick="onClickNumb" />

        <Button
            android:text="@string/three"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn3"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/border_top_left"
            android:onClick="onClickNumb" />

        <Button
            android:text="@string/minus"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnMinus"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/border_left_top_right_grey"
            android:onClick="onClickRes" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnZero"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/border_left_bottom_top"
            android:onClick="onClickNumb" />

        <Button
            android:text="@string/dot"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnDot"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/border_left_bottom_top"
            android:onClick="onClickNumb" />

        <Button
            android:text="@string/equally"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnEq"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/equality"
            android:onClick="onClickRes" />

        <Button
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnPlus"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/border_grey"
            android:onClick="onClickRes" />
    </LinearLayout>
</LinearLayout>
